<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.outlook.notyetapp.screen.graph.GraphActivity">
    <com.google.android.gms.ads.AdView
        android:id="@+id/graph_banner_ad"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_graph_activity_banner_unit_id">
    </com.google.android.gms.ads.AdView>
    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph_graph"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/graph_banner_ad"/>
</RelativeLayout>
