...
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_thickness"
        android:layout_below="@id/habit_data_header_layout"
        style="@style/SeparatorStyle" />

    <ListView
        android:id="@+id/habit_listview"
        android:layout_above="@id/separator_line_above_footer"
        android:layout_below="@id/separator_line_below_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</RelativeLayout>
